--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
 			</div>
 			<div class="wrapper"><span class="title">Unlimited Colors</span>
 				<ul class="colors">
-					<li><a href="#" data-color="#99CCFF"></a></li>
-					<li><a href="#" data-color="#99CCFF"></a></li>
-					<li><a href="#" data-color="#99CCFF"></a></li>
-					<li><a href="#" data-color="#99CCFF"></a></li>
-					<li><a href="#" data-color="#99CCFF"></a></li>
+					<li><a href="#" data-color="#0074D9"></a></li>
+					<li><a href="#" data-color="#1E88E5"></a></li>
+					<li><a href="#" data-color="#2E7D32"></a></li>
+					<li><a href="#" data-color="#388E3C"></a></li>
+					<li><a href="#" data-color="#43A047"></a></li>
 					<li><a href="#" data-color="#333"></a></li>
-					<li><a href="#" data-color="#99CCFF"></a></li>
-					<li><a href="#" data-color="#99CCFF"></a></li>
-					<li><a href="#" data-color="#99CCFF"></a></li>
-					<li><a href="#" data-color="#99CCFF"></a></li>
-					<li><a href="#" data-color="#99CCFF"></a></li>
-					<li><a href="#" data-color="#99CCFF"></a></li>
+					<li><a href="#" data-color="#6A1B9A"></a></li>
+					<li><a href="#" data-color="#7B1FA2"></a></li>
+					<li><a href="#" data-color="#E65100"></a></li>
+					<li><a href="#" data-color="#EF6C00"></a></li>
+					<li><a href="#" data-color="#C62828"></a></li>
+					<li><a href="#" data-color="#D32F2F"></a></li>
 					<li class="picker"><input type="text" value="#003399"></li>
 				</ul><span class="title">Magic Cursor</span>
 				<ul class="cursor">
@@ -204,26 +204,23 @@
 					<ul>
 						<li class="wow fadeInUp" data-wow-duration="1s">
 							<div class="item tilt-effect">
-								<img src="assets/picture/camera.svg" alt="" class="svg">
-								<h3>Latest Gadgets &amp; Gear</h3>
-								<p>Voluptate velit esse cillum dol ulla consequa re dolor in reprehenderit in volu pt
-									ate velit esse ceufon.</p>
+								<img src="assets/picture/image.svg" alt="" class="svg">
+								<h3>Travel  &amp; Iceland</h3>
+								<p>Travel is life dream<br>	Iceland is next destination.</p>
 							</div>
 						</li>
 						<li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
 							<div class="item tilt-effect">
-								<img src="assets/picture/image.svg" alt="" class="svg">
-								<h3>Smart Photo Packages</h3>
-								<p>Voluptate velit esse cillum dol ulla consequa re dolor in reprehenderit in volu pt
-									ate velit esse ceufon.</p>
+								<img src="assets/picture/medal.svg" alt="" class="svg">
+								<h3>Study  &amp; Research </h3>
+								<p>The clearest footprints are always on the muddy road <br>- Lao She.</p>
 							</div>
 						</li>
 						<li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
 							<div class="item tilt-effect">
-								<img src="assets/picture/medal.svg" alt="" class="svg">
-								<h3>Award Winning</h3>
-								<p>Voluptate velit esse cillum dol ulla consequa re dolor in reprehenderit in volu pt
-									ate velit esse ceufon.</p>
+								<img src="assets/picture/camera.svg" alt="" class="svg">
+								<h3>Entertainment </h3>
+								<p>Music and Netflix.<br>Football and Party</p>
 							</div>
 						</li>
 					</ul>
