--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 							<h5>Welcome to my space</h5>
 							<div class="booking">
 								<a href="#contact" class="button"><span>contact me</span></a>
-								<a href="#plans" class="link">click to end</a>
+								<a href="#plans" class="link">Find my value</a>
 							</div>
 						</div>
 						<!-- Left Circle Box (hero) -->
@@ -205,15 +205,15 @@
 						<li class="wow fadeInUp" data-wow-duration="1s">
 							<div class="item tilt-effect">
 								<img src="assets/picture/image.svg" alt="" class="svg">
-								<h3>Travel  &amp; Iceland</h3>
-								<p>Travel is life dream<br>	Iceland is next destination.</p>
+								<h3>Study  &amp; Research </h3>
+								<p>The clearest footprints are always on the muddy road <br>- Lao She.</p>
 							</div>
 						</li>
 						<li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
 							<div class="item tilt-effect">
 								<img src="assets/picture/medal.svg" alt="" class="svg">
-								<h3>Study  &amp; Research </h3>
-								<p>The clearest footprints are always on the muddy road <br>- Lao She.</p>
+								<h3>Travel  &amp; Iceland </h3>
+								<p>Travel is life dream<br>	Iceland is next destination.</p>
 							</div>
 						</li>
 						<li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
