--- a/index.html
+++ b/index.html
@@ -319,14 +319,14 @@
 							<div class="img_in">
 								<a class="popup-youtube" href="javascript:;"></a>
 								<img src="assets/picture/90-113.jpg" alt="">
-								<div class="main" data-img-url="assets/picture/1.jpg"></div>
+								<div class="main" data-img-url="assets/picture/iceland2.jpg"></div>
 							</div>
 						</div>
 						<div class="image" data-title="Cinematic Wedding" data-category="Vimeo">
 							<div class="img_in">
 								<a class="popup-vimeo" href="javascript:;"></a>
 								<img src="assets/picture/42-29.jpg" alt="">
-								<div class="main" data-img-url="assets/picture/21.jpg"></div>
+								<div class="main" data-img-url="assets/picture/zurich.jpg"></div>
 							</div>
 						</div>
 					</div>
@@ -335,14 +335,14 @@
 							<div class="img_in">
 								<a class="soundcloude_link mfp-iframe audio" href="javascript:;"></a>
 								<img src="assets/picture/90-113.jpg" alt="">
-								<div class="main" data-img-url="assets/picture/31.jpg"></div>
+								<div class="main" data-img-url="assets/picture/music3.jpg"></div>
 							</div>
 						</div>
 						<div class="image" data-title="Doro Piaro" data-category="Detail">
 							<div class="img_in">
 								<a class="portfolio_popup" href="#"></a>
 								<img src="assets/picture/42-29.jpg" alt="">
-								<div class="main" data-img-url="assets/picture/41.jpg"></div>
+								<div class="main" data-img-url="assets/picture/Netflix.jpg"></div>
 								<div class="hidden_content">
 									<div class="popup_details">
 										<div class="main_details">
@@ -369,14 +369,14 @@
 												<li>
 													<div class="list_inner">
 														<div class="my_image"><img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="assets/picture/1.jpg"></div>
+															<div class="main" data-img-url="assets/picture/iceland2.jpg"></div>
 														</div>
 													</div>
 												</li>
 												<li>
 													<div class="list_inner">
 														<div class="my_image"><img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="assets/picture/21.jpg">
+															<div class="main" data-img-url="assets/picture/zurich.jpg">
 															</div>
 														</div>
 													</div>
@@ -384,7 +384,7 @@
 												<li>
 													<div class="list_inner">
 														<div class="my_image"><img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="assets/picture/31.jpg">
+															<div class="main" data-img-url="assets/picture/music2.jpg">
 															</div>
 														</div>
 													</div>
@@ -400,13 +400,13 @@
 						<div class="image" data-title="Beautiful Lake" data-category="Youtube">
 							<div class="img_in"><a class="popup-youtube" href="javascript:;"></a><img
 									src="assets/picture/90-113.jpg" alt="">
-								<div class="main" data-img-url="assets/picture/52.jpg"></div>
+								<div class="main" data-img-url="assets/picture/hometown2.jpg"></div>
 							</div>
 						</div>
 						<div class="image" data-title="Picnic Table" data-category="Vimeo">
 							<div class="img_in"><a class="popup-vimeo" href="javascript:;"></a><img
 									src="assets/picture/42-29.jpg" alt="">
-								<div class="main" data-img-url="assets/picture/6.jpg"></div>
+								<div class="main" data-img-url="assets/picture/hometown.jpg"></div>
 							</div>
 						</div>
 					</div>
@@ -414,13 +414,13 @@
 						<div class="image" data-title="Mountain Hill" data-category="Soundcloud">
 							<div class="img_in"><a class="soundcloude_link mfp-iframe audio"
 									href="javascript:;"></a><img src="assets/picture/90-113.jpg" alt="">
-								<div class="main" data-img-url="assets/picture/7.jpg"></div>
+								<div class="main" data-img-url="assets/picture/666.jpg"></div>
 							</div>
 						</div>
 						<div class="image" data-title="Duru Village" data-category="Detail">
 							<div class="img_in"><a class="portfolio_popup" href="#"></a><img
 									src="assets/picture/42-29.jpg" alt="">
-								<div class="main" data-img-url="assets/picture/8.jpg"></div>
+								<div class="main" data-img-url="assets/picture/air.jpg"></div>
 								<div class="hidden_content">
 									<div class="popup_details">
 										<div class="main_details">
@@ -456,7 +456,7 @@
 													<div class="list_inner">
 														<div class="my_image">
 															<img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="assets/picture/1.jpg"></div>
+															<div class="main" data-img-url="assets/picture/iceland2.jpg"></div>
 														</div>
 													</div>
 												</li>
@@ -464,7 +464,7 @@
 													<div class="list_inner">
 														<div class="my_image">
 															<img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="assets/picture/21.jpg">
+															<div class="main" data-img-url="assets/picture/zurich.jpg">
 															</div>
 														</div>
 													</div>
@@ -473,7 +473,7 @@
 													<div class="list_inner">
 														<div class="my_image">
 															<img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="assets/picture/31.jpg">
+															<div class="main" data-img-url="assets/picture/music3.jpg">
 															</div>
 														</div>
 													</div>
@@ -490,14 +490,14 @@
 							<div class="img_in">
 								<a class="popup-youtube" href="javascript:;"></a>
 								<img src="assets/picture/90-113.jpg" alt="">
-								<div class="main" data-img-url="assets/picture/9.jpg"></div>
+								<div class="main" data-img-url="assets/picture/nowater.jpg"></div>
 							</div>
 						</div>
 						<div class="image" data-title="Power Castle" data-category="Vimeo">
 							<div class="img_in">
 								<a class="popup-vimeo" href="javascript:;"></a>
 								<img src="assets/picture/42-29.jpg" alt="">
-								<div class="main" data-img-url="assets/picture/10.jpg"></div>
+								<div class="main" data-img-url="assets/picture/iceland.jpg"></div>
 							</div>
 						</div>
 					</div>
@@ -506,14 +506,14 @@
 							<div class="img_in">
 								<a class="soundcloude_link mfp-iframe audio" href="javascript:;"></a>
 								<img src="assets/picture/90-113.jpg" alt="">
-								<div class="main" data-img-url="assets/picture/11.jpg"></div>
+								<div class="main" data-img-url="assets/picture/friends.jpg"></div>
 							</div>
 						</div>
 						<div class="image" data-title="Girl in Boat" data-category="Detail">
 							<div class="img_in">
 								<a class="portfolio_popup" href="#"></a>
 								<img src="assets/picture/42-29.jpg" alt="">
-								<div class="main" data-img-url="assets/picture/12.jpg"></div>
+								<div class="main" data-img-url="assets/picture/nanchang.jpg"></div>
 								<div class="hidden_content">
 									<div class="popup_details">
 										<div class="main_details">
@@ -540,14 +540,14 @@
 												<li>
 													<div class="list_inner">
 														<div class="my_image"><img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="assets/picture/1.jpg"></div>
+															<div class="main" data-img-url="assets/picture/iceland2.jpg"></div>
 														</div>
 													</div>
 												</li>
 												<li>
 													<div class="list_inner">
 														<div class="my_image"><img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="assets/picture/21.jpg">
+															<div class="main" data-img-url="assets/picture/zurich.jpg">
 															</div>
 														</div>
 													</div>
@@ -555,7 +555,7 @@
 												<li>
 													<div class="list_inner">
 														<div class="my_image"><img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="assets/picture/31.jpg">
+															<div class="main" data-img-url="assets/picture/music3.jpg">
 															</div>
 														</div>
 													</div>
