--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="Welcome To My Space">
 	<meta name="author" content="Marketify">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>在完善中| Home</title>
+	<title>完善中| Home</title>
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com/">
 	<link rel="preconnect" href="https://fonts.gstatic.com/">
@@ -21,7 +21,8 @@
 	<link type="text/css" rel="stylesheet" href="assets/css/style.css">
 	<!-- /Styles -->
 	<!-- Favicon -->
-	<link rel="shortcut icon" type="image/x-icon" href="your-icon-url.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="./me.ico?v=1">
+
 	<!-- /Favicon -->
 </head>
 
