--- a/index.html
+++ b/index.html
@@ -121,19 +121,19 @@
 			<div class="gallery_list_wrap">
 				<ul>
 					<li class="active">
-						<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c03af144a010074fb38a.jpg"></div>
+						<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/%E5%8E%8B%E7%BC%A9%E5%90%8E%E7%9A%84%E4%B8%BB%E5%9B%BE.jpg"></div>
 					</li>
 					<li>
-						<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c03af144a010074fb3ae.jpg"></div>
+						<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/study.jpg"></div>
 					</li>
 					<li>
-						<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c03af144a010074fb40d.jpg"></div>
+						<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/Photograph.jpg"></div>
 					</li>
 					<li>
-						<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c03af144a010074fb3dc.jpg"></div>
+						<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/series.jpg"></div>
 					</li>
 					<li>
-						<div class="main" data-img-url="https://pic.imgdb.cn/item/6405bfd9f144a010074f4024.jpg"></div>
+						<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/music.jpg"></div>
 					</li>
 				</ul>
 			</div><!-- Gallery List(hero) -->
@@ -289,7 +289,7 @@
 							<span class="line_d"></span>
 							<div class="img">
 								<img src="assets/picture/1-1.jpg" alt="">
-								<div class="main" data-img-url="https://pic.imgdb.cn/item/6405ed4cf144a0100799bcc6.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/iceland2.jpg"></div>
 							</div>
 						</div>
 						<!-- Right Side (information) -->
@@ -331,7 +331,7 @@
 							<div class="img_in">
 								<a class="popup-vimeo" href="javascript:;"></a>
 								<img src="assets/picture/42-29.jpg" alt="">
-								<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0b9f144a01007509ed0.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/zurich.jpg"></div>
 							</div>
 						</div>
 					</div>
@@ -347,7 +347,7 @@
 							<div class="img_in">
 								<a class="portfolio_popup" href="#"></a>
 								<img src="assets/picture/42-29.jpg" alt="">
-								<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0cff144a0100750dada.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/Netflix.jpg"></div>
 								<div class="hidden_content">
 									<div class="popup_details">
 										<div class="main_details">
@@ -381,7 +381,7 @@
 												<li>
 													<div class="list_inner">
 														<div class="my_image"><img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0b9f144a01007509ed0.jpg">
+															<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/zurich.jpg">
 															</div>
 														</div>
 													</div>
@@ -405,13 +405,13 @@
 						<div class="image" data-title="Beautiful Lake" data-category="Youtube">
 							<div class="img_in"><a class="popup-youtube" href="javascript:;"></a><img
 									src="assets/picture/90-113.jpg" alt="">
-								<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0c8f144a0100750c81e.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/hometown2.jpg"></div>
 							</div>
 						</div>
 						<div class="image" data-title="Picnic Table" data-category="Vimeo">
 							<div class="img_in"><a class="popup-vimeo" href="javascript:;"></a><img
 									src="assets/picture/42-29.jpg" alt="">
-								<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0c8f144a0100750c887.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/hometown.jpg"></div>
 							</div>
 						</div>
 					</div>
@@ -419,13 +419,13 @@
 						<div class="image" data-title="Mountain Hill" data-category="Soundcloud">
 							<div class="img_in"><a class="soundcloude_link mfp-iframe audio"
 									href="javascript:;"></a><img src="assets/picture/90-113.jpg" alt="">
-								<div class="main" data-img-url="https://pic.imgdb.cn/item/6405ce7ef144a0100763f6ed.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/666.jpg"></div>
 							</div>
 						</div>
 						<div class="image" data-title="Duru Village" data-category="Detail">
 							<div class="img_in"><a class="portfolio_popup" href="#"></a><img
 									src="assets/picture/42-29.jpg" alt="">
-								<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0b9f144a01007509f53.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/air.jpg"></div>
 								<div class="hidden_content">
 									<div class="popup_details">
 										<div class="main_details">
@@ -461,7 +461,7 @@
 													<div class="list_inner">
 														<div class="my_image">
 															<img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0c8f144a0100750c7e4.jpg"></div>
+															<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/iceland2.jpg"></div>
 														</div>
 													</div>
 												</li>
@@ -469,7 +469,7 @@
 													<div class="list_inner">
 														<div class="my_image">
 															<img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0b9f144a01007509ed0.jpg">
+															<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/zurich.jpg">
 															</div>
 														</div>
 													</div>
@@ -478,7 +478,7 @@
 													<div class="list_inner">
 														<div class="my_image">
 															<img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0c8f144a0100750c838.jpg">
+															<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/music3.jpg">
 															</div>
 														</div>
 													</div>
@@ -495,14 +495,14 @@
 							<div class="img_in">
 								<a class="popup-youtube" href="javascript:;"></a>
 								<img src="assets/picture/90-113.jpg" alt="">
-								<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0b9f144a01007509e51.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/nowater.jpg"></div>
 							</div>
 						</div>
 						<div class="image" data-title="Power Castle" data-category="Vimeo">
 							<div class="img_in">
 								<a class="popup-vimeo" href="javascript:;"></a>
 								<img src="assets/picture/42-29.jpg" alt="">
-								<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0c8f144a0100750c868.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/iceland.jpg"></div>
 							</div>
 						</div>
 					</div>
@@ -511,14 +511,14 @@
 							<div class="img_in">
 								<a class="soundcloude_link mfp-iframe audio" href="javascript:;"></a>
 								<img src="assets/picture/90-113.jpg" alt="">
-								<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0baf144a0100750a250.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/friends.jpg"></div>
 							</div>
 						</div>
 						<div class="image" data-title="Girl in Boat" data-category="Detail">
 							<div class="img_in">
 								<a class="portfolio_popup" href="#"></a>
 								<img src="assets/picture/42-29.jpg" alt="">
-								<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0b9f144a01007509ea2.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/nanchang.jpg"></div>
 								<div class="hidden_content">
 									<div class="popup_details">
 										<div class="main_details">
@@ -552,7 +552,7 @@
 												<li>
 													<div class="list_inner">
 														<div class="my_image"><img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0b9f144a01007509ed0.jpg">
+															<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/zurich.jpg">
 															</div>
 														</div>
 													</div>
@@ -560,7 +560,7 @@
 												<li>
 													<div class="list_inner">
 														<div class="my_image"><img src="assets/picture/4-2.jpg" alt="">
-															<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0c8f144a0100750c838.jpg">
+															<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/music3.jpg">
 															</div>
 														</div>
 													</div>
@@ -658,7 +658,7 @@
 						<li class="wow fadeInUp" data-wow-duration="1s">
 							<div class="list_inner">
 								<div class="image"><img src="assets/picture/42-29.jpg" alt="">
-									<div class="main" data-img-url="https://pic.imgdb.cn/item/6406ec86f144a01007128dab.jpg"></div><a
+									<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/blog1.jpg"></div><a
 										class="picman_tm_full_link" href="#"></a>
 								</div>
 								<div class="details"><span class="category"><a href="#">Shanghai</a></span>
@@ -677,7 +677,7 @@
 						<li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
 							<div class="list_inner">
 								<div class="image"><img src="assets/picture/42-29.jpg" alt="">
-									<div class="main" data-img-url="https://pic.imgdb.cn/item/6405f962f144a01007af399f.jpg"></div><a
+									<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/blog2.jpg"></div><a
 										class="picman_tm_full_link" href="#"></a>
 								</div>
 								<div class="details"><span class="category"><a href="#">Friends </a></span>
@@ -697,7 +697,7 @@
 						<li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
 							<div class="list_inner">
 								<div class="image"><img src="assets/picture/42-29.jpg" alt="">
-									<div class="main" data-img-url="https://pic.imgdb.cn/item/6405f876f144a01007acc73c.jpg"></div><a
+									<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/blog3.jpg"></div><a
 										class="picman_tm_full_link" href="#"></a>
 								</div>
 								<div class="details"><span class="category"><a href="#">The Ganjiang River</a></span>
@@ -807,7 +807,7 @@
 					<ul>
 						<li class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
 							<div class="item"><img src="assets/picture/1-1.jpg" alt="">
-								<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0c8f144a0100750c838.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/music3.jpg"></div>
 							</div>
 						</li>
 						<li class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
@@ -817,7 +817,7 @@
 						</li>
 						<li class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
 							<div class="item"><img src="assets/picture/1-1.jpg" alt="">
-								<div class="main" data-img-url="https://pic.imgdb.cn/item/6405c0b9f144a01007509e51.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/nowater.jpg"></div>
 							</div>
 						</li>
 						<li class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
@@ -827,7 +827,7 @@
 						</li>
 						<li class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
 							<div class="item"><img src="assets/picture/1-1.jpg" alt="">
-								<div class="main" data-img-url="https://pic.imgdb.cn/item/640600c7f144a01007bdd930.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/background.jpg"></div>
 							</div>
 						</li>
 					</ul>
