--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/study.jpg"></div>
 					</li>
 					<li>
-						<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/Photograph.jpg"></div>
+						<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/photograph.jpg"></div>
 					</li>
 					<li>
 						<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/series.jpg"></div>
@@ -289,7 +289,7 @@
 							<span class="line_d"></span>
 							<div class="img">
 								<img src="assets/picture/1-1.jpg" alt="">
-								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/iceland2.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/library.jpg"></div>
 							</div>
 						</div>
 						<!-- Right Side (information) -->
