--- a/index.html
+++ b/index.html
@@ -201,8 +201,6 @@
 
 		</div>
 		<!-- HERO -->
-
-
 		<!-- ABOUT -->
 		<div class="picman_tm_section" id="about">
 			<div class="picman_tm_about">
@@ -812,7 +810,7 @@
 						</li>
 						<li class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
 							<div class="item"><img src="assets/picture/1-1.jpg" alt="">
-								<div class="main" data-img-url="assets/picture/weichat.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/weichat.jpg"></div>
 							</div>
 						</li>
 						<li class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
@@ -822,7 +820,7 @@
 						</li>
 						<li class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
 							<div class="item"><img src="assets/picture/1-1.jpg" alt="">
-								<div class="main" data-img-url="assets/picture/QQ.jpg"></div>
+								<div class="main" data-img-url="https://wrfetggt.oss-cn-hangzhou.aliyuncs.com/QQ.jpg"></div>
 							</div>
 						</li>
 						<li class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
