--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 										<div class="price"><span class="text"><span> </span>Learn</span></div>
 									</div>
 									<div class="bottom_part">
-										<p>I have many abilities and ready to help</p>
+										<p>I have many abilities and I'm ready to help</p>
 										<p>PS and office</p>
 										<p>Easy html and python </p>
 										<p>Food science</p>
@@ -614,7 +614,7 @@
 										<p>if  you have innovative idea </p>
 										<p>such as </p>
 										<p>competition, opportunity, project, team</p>
-										<p>than</p>
+										<p>then</p>
 										<p>I am delighted to be your partner.</p>
 										<div class="button"><a href="#">Contact me</a></div>
 									</div>
@@ -735,7 +735,7 @@
 										<p><a href="tel:+19812663830">+86 19812663830</a></p>
 									</li>
 									<li>
-										<h4>Weichat</h4>
+										<h4>Wechat</h4>
 										<p>+86 19812663830</p>
 									</li>
 									<li>
